- Fixed demo title - Changed code location

--- a/demo.html
+++ b/demo.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <title>Form Test</title>
+    <title>Nine-Part Image Plugin Demo</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-    <script type="text/javascript" src='jquery.ninepart.js'></script>
+    <script type="text/javascript" src='http://code.f1techware.co.nz/jquery.ninepart/jquery.ninepart.js'></script>
     <script type="text/javascript">
       jQuery(function($){
         $('ul.border').ninePartImage('border-%.png', 8);
