Added link to git repo

--- a/demo.html
+++ b/demo.html
@@ -30,5 +30,6 @@
 		  <li>Item Three</li>
 		  <li>Item Four</li>
 		</ul>
+		<p>Source code at <a href="http://github.com/danielfone/jquery.ninepart.js/tree/master">GitHub</a></p>
   </body>
 </html>
