Added more text in footer

--- a/demo.html
+++ b/demo.html
@@ -73,7 +73,7 @@
 &lt;/p&gt;</pre>
   	  </div>
   	  <p style="margin-right: 0; margin-left: auto;" class="box">
-  		  Source code at <a href="http://github.com/danielfone/jquery.ninepart.js/tree/master">GitHub</a>.<br>
+  		  Download source code and example images at <a href="http://github.com/danielfone/jquery.ninepart.js/tree/master">GitHub</a>.<br>
   		  Sugar-free eye candy brought to you by <a href="http://www.f1techware.co.nz">F1 Techware</a>.
   		</p>
     </div>    
