Added function to preload images Misc tidying

--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src='jquery.ninepart.js'></script>
     <script type="text/javascript" src="prettify.js"></script>
     <script type="text/javascript">
+      jQuery.ninePartPreload('bg-%.png');
       jQuery(function($){
         if ( window.location.search != '?plain' ){
           $('.box').ninePartImage('bg-%.png');
